grammar.js
    source_file: ($) => seq(repeat($._source_unit)),

    //  -- [ Source Element ] --
    _source_unit: ($) => choice($._directive, $._declaration),

    //  -- [ Directives ] --
    contract_declaration: ($) =>
      seq(
        optional("abstract"),
        "contract",
        field("name", $.identifier),
        optional($._class_heritage),
        field("body", $.contract_body),
      ),

    _class_heritage: ($) => seq("is", commaSep1($.inheritance_specifier)),

    contract_body: ($) => seq("{", repeat($._contract_member), "}"),

    _contract_member: ($) =>
      choice(
        $.function_definition,
        $.modifier_definition,
        $.error_declaration,
        $.state_variable_declaration,
        $.struct_declaration,
        $.enum_declaration,
        $.event_definition,
        $.using_directive,
        $.constructor_definition,
        $.fallback_definition,
        $.receive_definition,
        $.user_defined_type_definition,
      ),

    using_directive: ($) =>
      seq(
        "using",
        choice(
          alias($.user_defined_type, $.type_alias),
          seq(
            "{",
            commaSep1(
              seq(
                alias($.user_defined_type, $.type_alias),
                optional(
                  seq("as", field("operator", $.user_definable_operator)),
                ),
              ),
            ),
            "}",
          ),
        ),
        "for",
        field("source", choice($.any_source_type, $.type_name)),
        optional("global"),
        $._semicolon,
      ),

    any_source_type: ($) => "*",

    _statement: ($) =>
      choice(
        $.block_statement,
        $.expression_statement,
        $.variable_declaration_statement,
        $.if_statement,
        $.for_statement,
        $.while_statement,
        $.do_while_statement,
        $.continue_statement,
        $.break_statement,
        $.try_statement,
        $.return_statement,
        $.emit_statement,
        $.assembly_statement,
        $.revert_statement,
      ),

    unchecked: ($) => "unchecked",
    block_statement: ($) =>
      seq(optional($.unchecked), "{", repeat($._statement), "}"),
    variable_declaration_statement: ($) =>
      prec(
        1,
        seq(
          choice(
            seq(
              $.variable_declaration,
              optional(seq("=", field("value", $._expression))),
            ),
            seq(
              $.variable_declaration_tuple,
              "=",
              field("value", $._expression),
            ),
          ),
          $._semicolon,
        ),
      ),

    variable_declaration: ($) =>
      seq(
        field("type", $.type_name),
        field("location", optional(choice("memory", "storage", "calldata"))),
        field("name", $.identifier),
      ),

    expression_statement: ($) => seq($._expression, $._semicolon),

    if_statement: ($) =>
      prec.right(
        seq(
          "if",
          "(",
          field("condition", $._expression),
          ")",
          field("body", $._statement),
          field("else", optional(seq("else", field("body", $._statement)))),
        ),
      ),

    for_statement: ($) =>
      seq(
        "for",
        "(",
        field(
          "initial",
          choice(
            $.variable_declaration_statement,
            $.expression_statement,
            $._semicolon,
          ),
        ),
        field("condition", choice($.expression_statement, $._semicolon)),
        field("update", optional($._expression)),
        ")",
        field("body", $._statement),
      ),

    while_statement: ($) =>
      seq(
        "while",
        "(",
        field("condition", $._expression),
        ")",
        field("body", $._statement),
      ),
    continue_statement: ($) => seq("continue", $._semicolon),
    break_statement: ($) => seq("break", $._semicolon),

    try_statement: ($) =>
      seq(
        "try",
        field("attempt", $._expression),
        optional(seq("returns", $._parameter_list)),
        field("body", $.block_statement),
        repeat1($.catch_clause),
      ),

    catch_clause: ($) =>
      seq(
        "catch",
        optional(seq(optional($.identifier), $._parameter_list)),
        field("body", $.block_statement),
      ),

    return_statement: ($) =>
      seq("return", optional($._expression), $._semicolon),

    emit_statement: ($) =>
      seq(
        "emit",
        field("name", $._expression),
        $._call_arguments,
        $._semicolon,
      ),

    //  -- [ Definitions ] --

    // Definitions
    function_definition: ($) =>
      seq(
        "function",
        field("name", $.identifier),
        $._parameter_list,
        repeat(
          choice(
            $.modifier_invocation,
            field("visibility", $.visibility),
            field("state_mutability", $.state_mutability),
            $.virtual,
            $.override_specifier,
          ),
        ),
        field("return_type", optional($.return_type_definition)),
        choice($._semicolon, field("body", $.function_body)),
      ),

    _call_arguments: ($) => prec(4, seq("(", commaSep($.call_argument), ")")),

    function_body: ($) => seq("{", repeat($._statement), "}"),

    // Expressions
    _expression: ($) =>
      choice(
        $.binary_expression,
        $.unary_expression,
        $.update_expression,
        $.call_expression,
        // TODO: $.function_call_options_expression,
        $.payable_conversion_expression,
        $.meta_type_expression,
        $._primary_expression,
        $.struct_expression,
        $.ternary_expression,
        $.type_cast_expression,
      ),

    binary_expression: ($) =>
      choice(
        ...[
          ["&&", PREC.AND],
          ["||", PREC.OR],
          [">>", PREC.TIMES],
          [">>>", PREC.TIMES],
          ["<<", PREC.TIMES],
          ["&", PREC.AND],
          ["^", PREC.OR],
          ["|", PREC.OR],
          ["+", PREC.PLUS],
          ["-", PREC.PLUS],
          ["*", PREC.TIMES],
          ["/", PREC.TIMES],
          ["%", PREC.TIMES],
          ["**", PREC.EXP],
          ["<", PREC.REL],
          ["<=", PREC.REL],
          ["==", PREC.REL],
          ["!=", PREC.REL],
          ["!==", PREC.REL],
          [">=", PREC.REL],
          [">", PREC.REL],
        ].map(([operator, precedence]) =>
          prec.left(
            precedence,
            seq(
              field("left", $._expression),
              field("operator", operator),
              field("right", $._expression),
            ),
          ),
        ),
      ),

    update_expression: ($) =>
      prec.left(
        PREC.INC,
        choice(
          seq(
            field("argument", $._expression),
            field("operator", choice("++", "--")),
          ),
          seq(
            field("operator", choice("++", "--")),
            field("argument", $._expression),
          ),
        ),
      ),

    call_expression: ($) =>
      prec.right(
        PREC.CALL,
        seq(field("function", $._expression), $._call_arguments),
      ),

    type_name: ($) =>
      choice(
        $.primitive_type,
        $.user_defined_type,
        $._mapping,
        $._array_type,
        $._function_type,
      ),

    _array_type: ($) =>
      prec(1, seq($.type_name, "[", optional($._expression), "]")),

    _function_type: ($) =>
      prec.right(
        seq(
          "function",
          field("parameters", $._parameter_list),
          repeat(
            choice(
              field("visibility", $.visibility),
              field("state_mutability", $.state_mutability),
            ),
          ),
          optional($._return_parameters),
        ),
      ),

    _parameter_list: ($) => seq("(", commaSep($.parameter), ")"),

    parameter: ($) =>
      seq(
        field("type", $.type_name),
        optional(field("location", $._storage_location)),
        optional(field("name", $.identifier)),
      ),

    _storage_location: ($) => choice("memory", "storage", "calldata"),

    user_defined_type: ($) => $._identifier_path,

    _identifier_path: ($) => prec.left(dotSep1($.identifier)),

    _mapping: ($) =>
      seq(
        "mapping",
        "(",
        field("key_type", $._mapping_key),
        optional(field("key_name", $.identifier)),
        "=>",
        field("value_type", $.type_name),
        optional(field("value_name", $.identifier)),
        ")",
      ),

    primitive_type: ($) =>
      prec.left(
        choice(
          seq("address", optional("payable")),
          "bool",
          "string",
          "var",
          $._int,
          $._uint,
          $._bytes,
          $._fixed,
          $._ufixed,
        ),
      ),

    _int: ($) =>
      choice(
        "int",
        "int8",
        "int16",
        "int24",
        "int32",
        "int40",
        "int48",
        "int56",
        "int64",
        "int72",
        "int80",
        "int88",
        "int96",
        "int104",
        "int112",
        "int120",
        "int128",
        "int136",
        "int144",
        "int152",
        "int160",
        "int168",
        "int176",
        "int184",
        "int192",
        "int200",
        "int208",
        "int216",
        "int224",
        "int232",
        "int240",
        "int248",
        "int256",
      ),
    _uint: ($) =>
      choice(
        "uint",
        "uint8",
        "uint16",
        "uint24",
        "uint32",
        "uint40",
        "uint48",
        "uint56",
        "uint64",
        "uint72",
        "uint80",
        "uint88",
        "uint96",
        "uint104",
        "uint112",
        "uint120",
        "uint128",
        "uint136",
        "uint144",
        "uint152",
        "uint160",
        "uint168",
        "uint176",
        "uint184",
        "uint192",
        "uint200",
        "uint208",
        "uint216",
        "uint224",
        "uint232",
        "uint240",
        "uint248",
        "uint256",
      ),
    _bytes: ($) =>
      choice(
        "byte",
        "bytes",
        "bytes1",
        "bytes2",
        "bytes3",
        "bytes4",
        "bytes5",
        "bytes6",
        "bytes7",
        "bytes8",
        "bytes9",
        "bytes10",
        "bytes11",
        "bytes12",
        "bytes13",
        "bytes14",
        "bytes15",
        "bytes16",
        "bytes17",
        "bytes18",
        "bytes19",
        "bytes20",
        "bytes21",
        "bytes22",
        "bytes23",
        "bytes24",
        "bytes25",
        "bytes26",
        "bytes27",
        "bytes28",
        "bytes29",
        "bytes30",
        "bytes31",
        "bytes32",
      ),

    _fixed: ($) => choice("fixed", /fixed([0-9]+)x([0-9]+)/),
    _ufixed: ($) => choice("ufixed", /ufixed([0-9]+)x([0-9]+)/),

    _semicolon: ($) => ";",

    identifier: ($) => /[a-zA-Z$_][a-zA-Z0-9$_]*/,

    number_literal: ($) =>
      seq(choice($._decimal_number, $._hex_number), optional($.number_unit)),
    _decimal_number: ($) =>
      choice(
        /(\d|_)+(\.(\d|_)+)?([eE](-)?(\d|_)+)?/,
        /\.(\d|_)+([eE](-)?(\d|_)+)?/,
      ),
    _hex_number: ($) => prec(10, /0[xX]([a-fA-F0-9][a-fA-F0-9]?_?)+/),
    // _hex_number: $ => seq(/0[xX]/, optional(optionalDashSeparation($._hex_digit))),
    true: ($) => "true",
    boolean_literal: ($) => choice($.true, $.false),
